# slim_conservation_scoring

./: .env  .gitignore  MANIFEST.in  README.md  environment.yml  environment_compatible.yml  environment_linux.yml  environment_mac.yml  pyproject.toml  setup.cfg  setup.py
archive/table_annotation/: quantify_conservation.py  run_scripts.py  s1setup_folder.py  s5multilevel_plots.py  table.csv  table_original_reindexed.csv
data/: grantham.csv
data/grantham_matrix/: convert2csv.py  grantham_norm.csv  grantham_similarity_norm.csv
data/substitution_matrices/: BLOSUM62.csv  BLOSUM62_max_off_diagonal_norm.csv  BLOSUM62_norm.csv  EDSSMat50.csv  EDSSMat50_max_off_diagonal.csv  EDSSMat50_sqrt_norm.csv
data_processing/: readme.md
data_processing/example_data/: commands_run.md  params.yml  run_full_pipeline.sh
data_processing/matrices/: get_matrices.ipynb
examples/table_annotation/: annotations.json  compare_results.py  conservation_analysis.py  conservation_pipeline.py  convert_2_excel.py  output_file.xlsx  params.yaml  params2.yaml  run.out  run.sh  s3find_hit.py  table.csv  table_ANALYZED.csv  table_ANALYZED.xlsx  table_ANNOTATED.csv  table_ANNOTATED.xlsx  table_odb_search_setup.json  table_original_reindexed.csv  temp.ipynb  your_excel_file.xlsx  ~$table_ANNOTATED.xlsx
examples/table_annotation_ind_folders/: conservation_pipeline.py  params.yaml  s07_conservation_annotation.py  s1setup_folder.py  s5multilevel_plots.py  s6output_aln_slice.py  s7map_results.py  s8table_annotations.py  table.csv  table_ANALYZED.csv  table_ANALYZED.xlsx  table_original_reindexed.csv
(+357 files in other folders)
